syntax = "proto3";

option java_package = "com.example";
option java_outer_classname = "GestorCorreosServiceProto";

service GestorCorreosService {
    rpc EnviarCorreo (CorreoRequest) returns (CorreoResponse);
    rpc RecibirCorreo (CorreoRequest) returns (CorreoResponse);
    rpc MarcarComoFavorito (FavoritoRequest) returns (CorreoResponse);
    rpc ListarFavoritos (FavoritoListRequest) returns (FavoritoListResponse);
}

message Correo {
    string remitente = 1;
    string destinatario = 2;
    string asunto = 3;
    string contenido = 4;
    bool esFavorito = 5; // Nuevo campo para marcar como favorito
}

message CorreoRequest {
    Correo correo = 1;
}

message CorreoResponse {
    string mensaje = 1;
}

message FavoritoRequest {
    string remitente = 1;
    bool esFavorito = 2;
}

message FavoritoListRequest {}

message FavoritoListResponse {
    repeated Correo correosFavoritos = 1;
}
